# agentes-auditores-contratos

./: README.md  pyproject.toml
output/: contrato_1_20260409_000134.json  contrato_1_20260409_000921.json  contrato_1_20260409_163546.json  contrato_2_20260408_234044.json  contrato_2_20260408_234902.json  contrato_2_20260408_235557.json  contrato_2_20260409_163815.json  contrato_3_20260408_235705.json  contrato_3_20260409_000019.json  contrato_4_20260409_000656.json
src/: exceptions.py  image_parser.py  main.py  models.py  output_writer.py  validations.py
src/agents/: contextualization_agent.py  extraction_agent.py
tests/: test_transcriptor.py  test_validations.py
tests/golden/contrato_1/modificado/: contrato_1_modificado.txt
tests/golden/contrato_1/original/: contrato_1_orignal.txt
tests/golden/contrato_3/modificado/: contrato_3_modificado.txt
tests/golden/contrato_3/original/: contrato_3_original.txt
