[project]
name = "agentes-auditores-contratos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langfuse>=4.0.6",
    "langgraph>=1.1.6",
    "python-dotenv>=1.2.2",
]
